@@ -5,15 +5,14 @@ DEADLINES
 DESIGN
 
 HIGH
+- PTP_ChallengeNode extends GTL_ChallengeNode
 - Game level 4: force inversion of slope in GTL challenge with 2 points
 - Game: generate challenges for levels 5-6
 - Game dev: Level 7 = configure your own challenge
 - Game: add support for mismatching the line form on the left and right side of GTL and MTE challenges (consult design doc)
 
 MEDIUM
-- make MatchChallenge.createInitialGuess private
 - factor out duplication in ChallengeFactory hierarchy when the dust settles
-- move duplication in GTL_ChallengeNode, MTE_ChallengeNode and P3P_ChallengeNode into base class ChallengeNode
 - rise value on slope tool falls off left edge of play area in Point-Slope tab
 
 LOW
